theme_defaultdir = $(lmmsdatadir)/themes/default
theme_default_DATA = default/*.png

theme_blue_scenedir = $(lmmsdatadir)/themes/blue_scene
theme_blue_scene_DATA = blue_scene/*.png

plugin_theme_blue_scenedir = $(lmmsdatadir)/themes/blue_scene/plugins
plugin_theme_blue_scene_DATA = blue_scene/plugins/*.png


EXTRA_DIST = $(theme_default_DATA) $(theme_blue_scene_DATA) $(plugin_theme_blue_scene_DATA)

